<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityAgenda">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textAlignment="center"
        android:paddingTop="100dp"
        android:paddingStart="100dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/evento"
            android:textSize="50sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:text="@string/data"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:text="@string/local"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:text="@string/horario"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/observacao"
            android:textAlignment="center"
            android:textSize="45sp" />

    </LinearLayout>
</ScrollView>