<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityAgenda">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:textSize="18sp"
            android:id="@+id/Evento"
            android:hint="@string/evento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="18sp"
            android:id="@+id/Local"
            android:hint="@string/local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="18sp"
            android:hint="@string/horario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="18sp"
            android:id="@+id/data"
            android:hint="@string/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>