<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <CalendarView
        android:id="@+id/calendarView2"
        android:layout_width="403dp"
        android:layout_height="367dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AgendaShows" />

    <TextView
        android:id="@+id/AgendaShows"
        android:hint="Agenda Shows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/agenda_shows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Agenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:text="@string/agenda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.759"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView2" />

    <ListView
        android:id="@+id/ListView"
        android:layout_width="342dp"
        android:layout_height="100dp"
        android:background="#BFEEF3"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Agenda"
        app:layout_constraintVertical_bias="0.263"
        tools:itemCount="4" />

    <Button
        android:id="@+id/btn_Adiciona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Adicionar"
        app:layout_constraintBottom_toTopOf="@+id/ListView"
        app:layout_constraintEnd_toStartOf="@+id/btn_Agenda"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView2"
        app:layout_constraintVertical_bias="0.406" />

    <Button
        android:id="@+id/FinalizarSessao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="143dp"
        android:text="@string/FinalizarSessão"
        app:layout_constraintTop_toTopOf="@+id/ListView"
        tools:layout_editor_absoluteX="283dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>